@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.465.2.50 2008-01-07 13:00:41 martin Exp $
+# $Id: CHANGES,v 1.465.2.51 2008-01-08 07:54:40 mh Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.2.5 (2008/??/??)
+ - (2008/01/08) Fixed bug# 2609 - Temp files are not removed after process was
+    finished under windows.
  - (2008/01/07) Fixed bug# 1893 - Attachement Storage fails with
     ArticleStorageFS in win32 with ? in filenames.
  - (2008/01/03) Fixed bug# 2491 - OTRS crash's after initial login on fresh
